Fixing the problem of returning links not containing news-articles by inspecting the parsed html content of returned links

--- a/CrawlingBBC.ipynb
+++ b/CrawlingBBC.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM/lxVM7L4NfACGp5weI1PX"
+      "authorship_tag": "ABX9TyOZGECczxvyAJD/hBxW5EKL"
     },
     "kernelspec": {
       "name": "python3",
@@ -48,7 +48,7 @@
         "from bs4 import BeautifulSoup\n",
         "import pickle\n"
       ],
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -69,7 +69,7 @@
         "news_page_url = \"https://bbc.com/news\"\n",
         "absolute_link_prefix = \"https://bbc.com\"\n"
       ],
-      "execution_count": 12,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -78,7 +78,7 @@
         "id": "rgzHfuU3bK_N"
       },
       "source": [
-        "##Scraping\n"
+        "##Scrape\n"
       ]
     },
     {
@@ -87,34 +87,26 @@
         "id": "J4x-otyBvPVA"
       },
       "source": [
-        "# Scrapes news stories from news_page_url (https://bbc.com/news)\n",
+        "# Obtains news stories links from news_page_url (https://bbc.com/news)\n",
         "def news_page_to_news_urls(url, prefix):\n",
         "    ''' Takes the URL to a news page and the prefix of the absolute link, and returns a list of news stories URLs.'''\n",
         "    news_urls = []\n",
         "    news_page_html = requests.get(url).text\n",
         "    news_page_soup = BeautifulSoup(news_page_html, \"html.parser\")\n",
         "    news_page_links = news_page_soup.findAll(\"a\") #find all links\n",
+        "    \n",
         "    for link in news_page_links:\n",
         "        href = link.get(\"href\")\n",
-        "        if href.startswith(\"/news\") and href[-1].isdigit():\n",
-        "           news_url = prefix + href\n",
-        "           news_urls.append(news_url)\n",
+        "        if href.startswith(\"/news\") and href[-1].isdigit(): #news articles start with /news and ends with a digit\n",
+        "            news_url = prefix + href\n",
+        "            s = BeautifulSoup(requests.get(news_url).text , \"html.parser\")\n",
+        "            if s.find(class_= \"css-16rg7hm-ContainerWithSidebarWrapper e1jl38b40\") is not None: #this class is only available in news articles\n",
+        "              news_urls.append(news_url)\n",
         "    return news_urls\n",
         "\n",
         "news_urls = news_page_to_news_urls(news_page_url, absolute_link_prefix)"
       ],
-      "execution_count": 14,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "eKQ4se6uEI7W"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     }
   ]
