Adding the cleansing part. To obtain article heading, article text and article time and save to a pandas dataframe.

--- a/CrawlingBBC.ipynb
+++ b/CrawlingBBC.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOZGECczxvyAJD/hBxW5EKL"
+      "authorship_tag": "ABX9TyMTkaE+YZpbejeEVUzaUQQQ"
     },
     "kernelspec": {
       "name": "python3",
@@ -107,6 +107,65 @@
         "news_urls = news_page_to_news_urls(news_page_url, absolute_link_prefix)"
       ],
       "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_ywQZnmqGFgU"
+      },
+      "source": [
+        "## Cleanse"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XI0CNwitGOXN"
+      },
+      "source": [
+        "news_headings = []\n",
+        "news_texts =[]\n",
+        "news_times = []\n",
+        "\n",
+        "for url in news_urls:\n",
+        "    print(\"Fetching {}\".format(url))\n",
+        "    response = requests.get(url)\n",
+        "    html = response.text\n",
+        "    soup = BeautifulSoup(html, \"html.parser\")\n",
+        "\n",
+        "    news_heading = (soup.find('h1')).text\n",
+        "    news_text = [p.text for p in soup.find('article').find_all('p')]\n",
+        "    news_time = (soup.find('time'))['datetime']\n",
+        "\n",
+        "    news_headings.append(news_heading)\n",
+        "    news_times.append(np.datetime64(news_time)) \n",
+        "    news_texts.append(news_text)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aSejefY0K1FL"
+      },
+      "source": [
+        "df = pd.DataFrame(list(zip(news_times, news_headings, news_texts)), \n",
+        "                  columns =['datetime', 'heading', 'text']) "
+      ],
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1Uu-mCu7ODkN"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
